re PR middle-end/41469 (-fexceptions ICE in expand_gimple_stmt_1, at cfgexpand.c:1947)

PR middle-end/41469
        * tree-eh.c (lower_resx): Resolve RESX with no source region to
        __builtin_trap.
        (gate_lower_resx): New.
        (gate_lower_eh_dispatch): Rename from gate_lower_ehcontrol.

From-SVN: r152185